# janitor

./: Cargo.toml  README.md  build.rs  janitor.ini  janitor.service  janitor.toml  renovate.json
.github/workflows/: ci.yml  publish.yml
icons/: app-resources.rc
src/: config.rs  icons.rs  main.rs
src/systemd/: janitor.service
