[package]
name = "janitor-service"
version = "0.1.8"
edition = "2021"
description = "A service that cleans up your downloads folder"
license = "MIT"
repository = "https://github.com/sharunkumar/janitor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0.1"
glob = "0.3.1"
lazy_static = "1.4.0"
notify = "6.0.1"
notify-debouncer-mini = "0.3.0"
notify-rust = "4.8.0"
serde = { version = "1.0.167", features = ["derive"] }
single-instance = "0.3.3"
toml = "0.7.6"

[target.'cfg(windows)'.dependencies]
tray-item = { version = "0.8.0" }

[target.'cfg(windows)'.build-dependencies]
windres = "0.2.2"

[target.'cfg(not(windows))'.dependencies]
tray-item = { version = "0.8.0", features = ["ksni"] }
png = "0.16.8"
