[package]
name = "janitor-service"
version = "0.1.35"
edition = "2021"
description = "A service that cleans up your downloads folder"
license = "MIT"
repository = "https://github.com/sharunkumar/janitor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0.1"
glob = "0.3.1"
lazy_static = "1.5.0"
notify = "7.0.0"
notify-debouncer-mini = "0.5.0"
notify-rust = "4.11.3"
serde = { version = "1.0.214", features = ["derive"] }
single-instance = "0.3.3"
toml = "0.8.19"

[target.'cfg(windows)'.dependencies]
tray-item = { version = "0.10.0" }

[target.'cfg(windows)'.build-dependencies]
windres = "0.2.2"

[target.'cfg(not(windows))'.dependencies]
tray-item = { version = "0.10.0", features = ["ksni"] }
